# FVHD

./: .gitignore  .pre-commit-config.yaml  README.md  athena_req.txt  athera_req.txt  environment.yml  experiment.py  jax_trimap.py  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  time_measure.py  times_before.txt  timings.ipynb
.github/workflows/: python-publish.yml
dashboard/: app.py
datasets/: __init__.py  torchvision_datasets.py
docs/: Makefile  conf.py  index.rst
docs/modules/: classes.rst
docs/source/: conf.py  index.rst  ivhd.rst  modules.rst
examples/: distance_example.ipynb  example.py  examples.ipynb  fmnist_example.py  fmnist_examples.ipynb  mnist_example.py  mnist_examples.ipynb  precomputedNN_examples.ipynb
fvhd/: fvhd.py
ivhd/: __init__.py  ivdh.py  ivhd.py  ivhd_grad.py
knn/: generator.py  graph.py
knn_graph/: faiss_generator.py  graph.py
metrics/: metrics.py
models/: trimap.py  tsne.py
notebooks/: algorithm.md  graph_analysis.ipynb
tests/: test_fvhd.py  test_ivhd.py
tests/ivhd/: test_ivhd.py  test_ivhdgrad.py  utils.py
