[tool.poetry]
name = "ivhd"
version = "0.1.0"
description = "A fast and simple algorithm for embedding large and high-dimensional data"
authors = [
    "Bartosz Minch <minch@agh.edu.pl>",
]
repository = "https://github.com/langMonk/IVHD"
license = "MIT"
packages = [
    { include = "ivhd" }
]

readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
scikit-learn = "^1.6.0"
torch = "^2.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.9.3"
mypy = "^1.13.0"
pandas = "^2.2.2"
pre-commit = "^4.0.1"
pydata-sphinx-theme = "^0.16.0"
pytest = "^8.3.4"
sphinx = "^8.1.3"
seaborn = "^0.13.2"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
